Change main navbar class to navbar-fixed-top
...and make necessary changes so stuff doesn't get hidden under the
floating navbar

--- a/flask_admin_material/static/css/admin-material.css
+++ b/flask_admin_material/static/css/admin-material.css
@@ -2,7 +2,9 @@
     padding-left: 0;
     padding-right: 0;
 }
-
+.container .main-page {
+    margin-top: 5em;
+    }
 /* These  menu styles are modified from the original, which can be found */
 /* at http://fezvrasta.github.io/bootstrap-material-design/index.css */
 .menu {
